@@ -186,6 +186,8 @@ New Features
   to dates.  
   (Gijs Kunze, hossman)
 
+* SOLR-2021: Add SolrEncoder plugin to Highlighter. (koji)
+
 Optimizations
 ----------------------
 
